--- a/QR_code.ipynb
+++ b/QR_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "8f5d5fb5",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ QR code saved to: C:\\Users\\A1990\\AppData\\Local\\Programs\\Microsoft VS Code\\catalog_qr.png\n"
+      "✅ QR code saved to: C:\\Users\\A1990\\QR-code\\catalog_qr.png\n"
      ]
     }
    ],
@@ -19,7 +19,8 @@
     "from pathlib import Path\n",
     "\n",
     "# ✅ Replace this with the final public link once hosted on GitHub Pages\n",
-    "CATALOG_URL = \"https://github.com/a1990alpalo/QR-code\"  # Update this if using GitHub Pages\n",
+    "CATALOG_URL = \"https://a1990alpalo.github.io/QR-code/\"\n",
+    "\n",
     "\n",
     "# ✅ Create QR code with error correction (medium)\n",
     "qr = qrcode.QRCode(\n",
